# energy_consumption_prediction-master

./: README.md  pyproject.toml
data/processed/: df.xlsx
models/: gru_model.pt  lstm_model.pt
src/: Energy consumption prediction using LSTM-GRU in PyTorch.ipynb  config.yaml  df.xlsx  eda_prep_train.ipynb  evaluate_plot.ipynb  fct.py
