[project]
name = "energy-consumption-prediction-master"
version = "0.1.0"
description = ""
authors = [
    {name = "Briac Le Guillou",email = "briacleguilloux@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.5.2,<3.6.0)",
    "tqdm (>=4.64.0,<4.65.0)",
    "jupyter (==1.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_cpu"}
torchvision = {source = "pytorch_cpu"}
